yaml_parser/tests/fail/wrong-indendation-in-mapping.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 2, column 4
  |
2 |  k2: v2
  |    ^
expected `...`
